storagedemo/web3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: registry.ocp4.example.com:8443/rhel8/httpd-24:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /var/www/html
          name: mypod
        name: mydemo
      volumes: 
      - name: mypod
        persistentVolumeClaim: 
          claimName: nfs-pvc1
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
