storagedemo/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: web
  name: web
spec:
  port:
    targetPort: 8080
  to:
    kind: ""
    name: web
